--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@ legitimate reasons they are unable to attend in person.</p>
 <li>Xiaojing Liao,        Indiana University</li>
 <li>Kangjie       Lu,     University of Minnesota</li>
 <li>Zhiyun Qian,  UC Riverside</li>
+<li>Bradley Reaves, North Carolina State University</li>
 <li>Elissa Redmiles,      MPI-SWS</li>
 <li>Gianluca Stringhini,  Boston University</li>
 <li>Yuzhe Tang,   Syracuse University</li>
