--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@ legitimate reasons they are unable to attend in person.</p>
 <li>William       Enck,   North Carolina State University</li>
 <li>David Evans,  University of Virginia</li>
 <li>Nick  Hopper, University of Minnesota</li>
+<li>Trent Jaeger, Penn State University</li>
 <li>Rob   Jansen, U.S. Naval Research Laboratory</li>
 <li>Shouling Ji,  Zhejiang University</li>
 <li>Xiaojing Liao,        Indiana University</li>
