--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ potential ethical concerns.</p>
 <div class="section" id="important-dates">
 <h3>Important dates</h3>
 <ul class="simple">
-<li>March 21, 2022 (AoE, UTC -12): Paper submission</li>
+<li><span class="strike">March 21, 2022</span> March 28, 2022 (AoE, UTC -12): Paper submission</li>
 <li>April 11, 2022: Notification</li>
 <li>April 15, 2022: Camera-ready paper</li>
 <li>June 10, 2022: Workshop</li>
